# project_template

./: README.md  autoinstall  pyproject.toml
examples/: 01_example.ipynb
zed/: settings.json
