[project]
authors = [{ "name" = "Antonio Oliver", "email" = "antoniooliver1@pm.me" }]
name = "project_template"
requires-python = ">= 3.12"
version = "0.0.1"
description = "Template of project"
dependencies = []
readme = "README.md"
license = "MIT"


[project.optional-dependencies]
dev = ["ruff", "mypy", "jupyterlab"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project_template"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "E501", # line too long, handled by black
]
preview = true
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "DOC",  # pydoclint
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # perflint
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.mypy]
namespace_packages = true
strict = true
warn_unused_ignores = false
